--- a/python/tox.ini
+++ b/python/tox.ini
@@ -3,4 +3,4 @@ envlist = py26, py27, pypy
 
 [testenv]
 setenv   = LD_LIBRARY_PATH={toxinidir}/..
-commands = ./test_fields.py
+commands = python test_fields.py
