--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,3 +4,4 @@ envlist = py26, py27, pypy
 [testenv]
 setenv   = LD_LIBRARY_PATH={toxinidir}/..
 commands = python test_fields.py
+    python -m doctest README.md
